guide/examples/datera-k8s-external-provisioner.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: datera-provisioner-agent
  namespace: datera
  labels:
    tier: datera-dynamic-provisioner
    app: datera-provisioner-agent
    version: v1.8
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: datera-provisioner
    spec:
      hostPID: true
      hostIPC: true
      hostNetwork: true
      serviceAccount: datera-k8s-external-provisioner
      containers:
      - name: datera-provisioner
        imagePullPolicy: Always
        image: dateraio/datera-provisioner:latest
        securityContext:
          privileged: true
        command: [ "bash", "-c", "/datera-provisioner/datera-provisioner-installer.sh" ]
        volumeMounts:
          - name: udev-rules
            mountPath: /udev-rules
          - name: scripts
            mountPath: /scripts
          - name: log
            mountPath: /log
      volumes:
        - name: udev-rules
          hostPath:
              path: /etc/udev/rules.d
        - name: scripts
          hostPath:
              path: /sbin/
        - name: log
          hostPath:
              path: /var/log
