guide/examples/consul-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul
spec:
  rules:
  - host: consul.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: consul-ui
          servicePort: 8500
